# AccessibleChess

./: .gitignore  Makefile  README.md
cutechess/: CMakeLists.txt  projects.pro
cutechess/gui/: Makefile  gui.pro
cutechess/gui/Cute Chess.app/Contents/MacOS/: Cute Chess
cutechess/gui/src/: :q  cutechessapp.cpp  cutechessapp.h  gameviewer.cpp  main.cpp  mainwindow.cpp  mainwindow.h  newgamedlg.cpp  newgamedlg.h
cutechess/lib/: Makefile  lib.pro
cutechess/lib/.moc/: gamemanager.moc  moc_chessengine.cpp  moc_chessgame.cpp  moc_chessplayer.cpp  moc_enginemanager.cpp  moc_gamemanager.cpp  moc_gauntlettournament.cpp  moc_humanplayer.cpp  moc_knockouttournament.cpp  moc_pyramidtournament.cpp  moc_roundrobintournament.cpp  moc_tournament.cpp  moc_uciengine.cpp  moc_worker.cpp  moc_xboardengine.cpp
cutechess/lib/.rcc/: qrc_eco.cpp
cutechess/lib/src/: chessgame.h  src.pri
cutechess/lib/src/python/: MessageQueue.cpp  MessageQueue.h  PyComm.cpp  PyComm.h  pyapi.h  python.pri  voiceassistant.cpp  voiceassistant.h
gui/: Makefile  ui_engineconfigdlg.h  ui_enginemanagementwidget.h  ui_engineselectiondlg.h  ui_gamedatabasedlg.h  ui_gamedatabasesearchdlg.h  ui_gamesettingswidget.h  ui_importprogressdlg.h  ui_newgamedlg.h  ui_newtournamentdlg.h  ui_settingsdlg.h  ui_timecontroldlg.h  ui_tournamentsettingswidget.h
gui/.moc/: gamedatabasedlg.moc  gamewall.moc  moc_autoverticalscroller.cpp  moc_boardscene.cpp  moc_boardview.cpp  moc_chessclock.cpp  moc_cutechessapp.cpp  moc_engineconfigproxymodel.cpp  moc_engineconfigurationdlg.cpp  moc_engineconfigurationmodel.cpp  moc_enginemanagementwidget.cpp  moc_engineoptiondelegate.cpp  moc_engineoptionmodel.cpp  moc_engineselectiondlg.cpp  moc_evalhistory.cpp  moc_evalwidget.cpp  moc_gamedatabasedlg.cpp  moc_gamedatabasemanager.cpp  moc_gamedatabasesearchdlg.cpp  moc_gamesettingswidget.cpp  moc_gametabbar.cpp  moc_gameviewer.cpp  moc_gamewall.cpp  moc_graphicspiece.cpp  moc_importprogressdlg.cpp  moc_mainwindow.cpp  moc_movelist.cpp  moc_newgamedlg.cpp  moc_newtournamentdialog.cpp  moc_pathlineedit.cpp  moc_pgndatabase.cpp  moc_pgndatabasemodel.cpp  moc_pgngameentrymodel.cpp  moc_pgnimporter.cpp  moc_pgntagsmodel.cpp  moc_piecechooser.cpp  moc_plaintextlog.cpp  moc_qcustomplot.cpp  moc_settingsdlg.cpp  moc_stringvalidator.cpp  (+5 more)
gui/.rcc/: qrc_chessboard.cpp  qrc_icons.cpp
gui/Cute Chess.app/Contents/: Info.plist
saved-games/: game.pgn  saved.pgn
speech/: accessible_chess.py  chess.py  echo.py  snowboydecoder.py  speech.py
speech/resources/: Gambit.pmdl
tests/: test_cancel_new_game.py  test_choose_side.py  test_forfeit_game.py  test_make_move.py  test_new_game.py  test_pycomm_attrs.py  test_query_attackers.py  test_query_material.py  test_save_and_load_game.py
